alignment fix

--- a/src/components/mint/Mint.scss
+++ b/src/components/mint/Mint.scss
@@ -45,7 +45,7 @@
 
     .total {
       padding: 1em;
-      margin: 2em 0 2em auto;
+      margin: 2em auto 2em auto;
     }
 
     .gradient-container {
